Restructure code to allow for the sensors to be disabled

--- a/wall_clock-TEMPLATE.ini
+++ b/wall_clock-TEMPLATE.ini
@@ -21,6 +21,10 @@ DisplayBrightness = .2
 # 12 hour time has the leading zero removed, 24 hour time does not
 AMPM = True
 
+#Enable or disable sensors
+UseBME280 = True
+UseVEML7700 = True
+
 #I2C Addresses?
 #Pin Values?
 
